<resources>
    <string name="app_name">EducScan</string>
    <string name="titre_home">Calendrier</string>
    <string name="titre_camembert">Proportion présence/absence</string>
    <string name="titre_logo_camembert">Proportion</string>
    <string name="titre_dashboard">QRcode</string>
    <string name="titre_listes">Listes des Présents/Absents</string>
    <string name="titre_logo_listes">Listes</string>
    <string name="titre_parametres">Paramètres</string>
    <string name="titre_bouton_login">Connexion</string>
    <string name="titre_chpwd">Change Password</string>
    <string name="bouton_chpwd">Confirmer</string>
    <string name="titre_boutton_signup">Inscription</string>
    <string name="titre_absent">Liste des Absents</string>
    <string name="titre_present">Liste des Présents</string>
    <string name="nom">Nom</string>
    <string name="mail">Mail</string>
    <string name="identifiant">Identifiant</string>
    <string name="mdp">Mot de passe</string>
    <string name="button_change_mdp">Changer</string>
    <string name="hint_vieux_mdp">Ancien Mot de Passe</string>
    <string name="hint_nv_mdp">Nouveau Mot de Passe</string>

    <string name="title_home">Shedule</string>
    <string name="title_camembert">Presence/Absence Ratio</string>
    <string name="title_logo_camembert">Ration</string>
    <string name="title_dashboard">QRcode</string>
    <string name="title_listes">Lists of Present/Absent</string>
    <string name="title_logo_listes">Lists</string>
    <string name="title_parametres">Setting</string>
    <string name="title_button_login">Login</string>
    <string name="title_chpwd">Change Password</string>
    <string name="button_chpwd">Confirm</string>
    <string name="title_button_signup">Sign Up</string>
    <string name="title_absent">List of Absent</string>
    <string name="title_present">List of Present</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="id">Username</string>
    <string name="pwd">Password</string>
    <string name="button_change_pwd">Change</string>
    <string name="hint_old_pwd">Old Password</string>
    <string name="hint_new_pwd">New Password</string>

</resources>