<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_prof"
    app:startDestination="@id/navigation_camembert">

    <fragment
        android:id="@+id/navigation_camembert"
        android:name="fr.isen.perigot.educscan.ui.home.CamembertFragment"
        android:label="@string/title_camembert"
        tools:layout="@layout/fragment_camembert" />

    <fragment
        android:id="@+id/navigation_listes"
        android:name="fr.isen.perigot.educscan.ui.dashboard.ListesFragment"
        android:label="@string/title_listes"
        tools:layout="@layout/fragment_listes" />

    <fragment
        android:id="@+id/navigation_parametres"
        android:name="fr.isen.perigot.educscan.ui.paramètre.ParametresFragment"
        android:label="@string/title_parametres"
        tools:layout="@layout/fragment_notifications" />

</navigation>