<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.paramètre.ParametresFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/microsoftteams_image__5_"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".SignUpActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_edittext"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/text_dashboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/bordeau"
                    android:fontFamily="serif"
                    android:text="@string/title_parametres"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/bordeau"
                    android:textSize="34sp"
                    android:textStyle="bold|italic" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="38dp" />

                <LinearLayout
                    android:layout_width="306dp"
                    android:layout_height="131dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/baseline_person_24" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="44dp" />

                <LinearLayout
                    android:layout_width="303dp"
                    android:layout_height="26dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nom_titre"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/name"
                        android:textAlignment="textStart"
                        android:textColor="@color/bordeau"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/nom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="34dp" />

                <LinearLayout
                    android:layout_width="303dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/email_titre"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/email"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/bordeau"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/mail"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/id_titre"
                        android:layout_width="29dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/id"
                        android:textAlignment="textStart"
                        android:textColor="@color/bordeau"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/id"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="34dp" />

                <LinearLayout
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mdp"
                        android:layout_width="153dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/pwd"
                        android:textAlignment="textStart"
                        android:textColor="@color/bordeau"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <Button
                        android:id="@+id/change_mdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_change_pwd" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_logout_24"
        android:background="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onLogoutButtonClick"/>


</androidx.constraintlayout.widget.ConstraintLayout>