<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/microsoftteams_image__5_"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_isen_blanc"
        app:cardCornerRadius="40dp" />

    <ImageView
        android:layout_width="246dp"
        android:layout_height="158dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_cercle"
        app:cardCornerRadius="40dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/title_button_login"
                android:textAlignment="center"
                android:textColor="@color/bordeau"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:startIconTint="@color/purple_700"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/username"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="40dp"
                    android:padding="8dp"
                    android:hint="@string/id"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/purple_700"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/password"
                    android:background="@drawable/custom_edittext"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:hint="@string/pwd"
                    android:textColor="@color/black"
                    android:drawablePadding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/bordeau"
                android:text="@string/title_button_login"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:cornerRadius="20dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>